[package]
name = "streaming"
version = "0.1.0"
authors = ["gabivlj <gabitriqui@gmail.com>"]
edition = "2018"
RUST_BACKTRACE=1

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "^0.2.1"
actix-cors = "^0.2.0"
actix-multipart = "0.2.0"
futures = "0.3.1"
rand="0.6.0"
paseto = "^1.0.7"
ring = "0.16.10"
json = "0.2.1"
dotenv = "0.15.0"
chrono = "0.4.11"
serde_json = "1.0"
pem="0.4.1"